--- a/angular2/app.component.html
+++ b/angular2/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <app-cockpit (serverCreated)="onServerAdded($event)"
-  (blueprintCreated)="onBlueprintAdded($event)">
+  <app-cockpit (srvCreated)="onServerAdded($event)"
+  (bptCreated)="onBlueprintAdded($event)">
   </app-cockpit>
   <hr>
   <div class="row">
