--- a/angular2/cockpit/cockpit.component.html
+++ b/angular2/cockpit/cockpit.component.html
@@ -4,7 +4,7 @@
     <label>Server Name</label>
     <input type="text" class="form-control" #ServerNameInput>
     <label>Server Content</label>
-    <input type="text" class="form-control" [(ngModel)]="newServerContent">
+    <input type="text" class="form-control" #ServerContentInput>
     <br>
     <button
       class="btn btn-primary"
